--- a/src/components/thumb/styles.module.css
+++ b/src/components/thumb/styles.module.css
@@ -1,4 +1,4 @@
-.thumb-container {
+.container {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr minmax(50px, auto);
@@ -13,7 +13,7 @@
   object-fit: cover;
 }
 
-.thumb-title {
+.title {
   background-color: rgba(255, 255, 255, 0.5);
   grid-column: 1;
   grid-row: 2;
