navbar and fix movie detail page

--- a/src/components/grid/styles.module.scss
+++ b/src/components/grid/styles.module.scss
@@ -6,4 +6,7 @@
   in-height: 100vh;
   align-content: center;
   justify-content: center;
+  @media (max-width: 425px){
+    grid-template-columns: repeat(auto-fit, 100%);
+  }
 }
